<resources>
    <string name="app_name">sharephoto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_name">Enter your full name</string>
    <string name="prompt_password">Choose your Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_signup">SIGN UP</string>
    <string name="action_sign_up">Sign Up with Email</string>
    <string name="action_login">Login with Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="invalid_name">Name is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_logo">app logo</string>
    <string name="or">OR</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photos">Add Photos</string>
    <string name="menu_profile">Profile</string>

    <string name="post_like_label">%1d Likes</string>
</resources>
