<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.raj.sharephoto.ui.signup.SignUpViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:context=".ui.login.SignUpActivity">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/email"
                android:layout_marginBottom="16dp"
                android:hint="@string/prompt_name"
                app:textInputLayoutValidation="@{viewModel.nameValidation}"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:text="@={viewModel.nameField}"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                android:hint="@string/prompt_email"
                app:textInputLayoutValidation="@{viewModel.emailValidation}"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:text="@={viewModel.emailField}"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                app:textInputLayoutValidation="@{viewModel.passwordValidation}"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:text="@={viewModel.passwordField}"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/action_sign_up"
                android:onClick="@{()->viewModel.doSignUp()}"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_height="wrap_content"/>

        <TextView android:id="@+id/already_signed"
                android:layout_width="wrap_content"
                  android:text="already signed up"
                  android:layout_marginTop="16dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/signUp"
                  android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/action_login"
                android:onClick="@{()->viewModel.goToLoginScreen()}"
                app:layout_constraintTop_toBottomOf="@+id/already_signed"
                android:layout_height="wrap_content"/>

        <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:visibility="@{safeUnbox(viewModel.isSigningIn) ? View.VISIBLE : View.GONE}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

